feat(api/go): add mutation API with methods on TodoList/Plan types and updater package
- Add mutation methods directly on TodoList type: AddItem, RemoveItem, UpdateItem, FindItem
- Add mutation methods directly on Plan type: AddNarrative, RemoveNarrative, UpdateNarrative, AddPhase, RemovePhase, UpdatePhase
- Create updater package providing validated mutations that ensure document validity
- Add comprehensive tests for mutation methods (pkg/core/mutation_test.go)
- Add comprehensive tests for updater package (pkg/updater/updater_test.go)
- Add mutations example demonstrating both direct and validated mutations
- Update README with detailed mutation API documentation
- Add run:mutations task to Taskfile
- Add validator.New() convenience function
- Define error types: ErrInvalidIndex, ErrNarrativeNotFound

All tests passing with 75.5% coverage (exceeds 75% requirement).

Aligns implementation with vAgenda-extension-api-go.md specification.

--- a/api/go/Taskfile.yml
+++ b/api/go/Taskfile.yml
@@ -80,9 +80,13 @@ tasks:
 
   run:example:
     desc: Run the basic example
-    dir: examples/basic
     cmds:
-      - go run main.go
+      - go run examples/basic/main.go
+
+  run:mutations:
+    desc: Run the mutations example
+    cmds:
+      - go run examples/mutations/main.go
 
   clean:
     desc: Clean build artifacts and coverage files
